--- a/credits.html
+++ b/credits.html
@@ -55,7 +55,7 @@
                         Start</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features11-1n">3D Druck</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html#info1-1v">
+                    <a class="nav-link link text-white display-4" href="index.html#info2-f">
                         
                         Materialien</a>
                 </li></ul>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="mbr-section content4 cid-rLbm1W6NBL" id="content4-22">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content4 cid-rLbm1W6NBL" id="content4-22">
 
     
 
