--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         Start</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features11-1n">3D Druck</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html#info1-1v">
+                    <a class="nav-link link text-white display-4" href="index.html#info2-f">
                         
                         Materialien</a>
                 </li></ul>
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
