--- a/index.html
+++ b/index.html
@@ -10,20 +10,23 @@
   <meta name="description" content="Selbstgemachtes, individueller und hochwertiger 3D Druck">
   
   <title>Home</title>
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
+
 </head>
 <body>
   <section class="menu cid-rLbDdgYCwX" once="menu" id="menu1-24">
@@ -68,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -80,7 +83,7 @@
             <h3 class="mbr-section-subtitle py-3 mbr-fonts-style display-5"></h3>
             <h1 class="mbr-section-title py-3 mbr-fonts-style display-1"><strong>Selbstgemachtes in 3D&nbsp;</strong></h1>
             <p class="mbr-text py-3 mbr-fonts-style display-5">Wir fertigen individuelle und einzigartige Produkte rund um<br><strong>3D Druck</strong>. Wir legen wert auf höchste Qualität und top Materialien. Besuche unseren Shop bei <a href="https://www.etsy.com" target="_blank"><strong>Etsy</strong></a>.</p>
-            <div class="mbr-section-btn py-4"><a class="btn btn-md btn-primary display-4" href="index.html#features11-1n">Mehr</a></div>
+            <div class="mbr-section-btn py-4"><a class="btn btn-md btn-primary display-4" href="index.html#features11-1n"><strong>Mehr</strong></a> <a class="btn btn-md btn-warning display-4" href="mailto:anfrage@flauschcraft.com"><strong>Anfrage senden</strong></a></div>
         </div>
     </div>
 
@@ -107,17 +110,17 @@
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2"><strong>
                         3D Druck</strong></h2>
                     <div class="mbr-section-text">
-                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">Wir bieten</p>
+                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">Du bekommst bei uns:</p>
                     </div>
 
                     <div class="block-content">
                         <div class="card p-3 pr-3">
                             <div class="media">
                                 <div class=" align-self-center card-img pb-3">
-                                    <span class="mbr-iconfont mbri-extension" style="color: rgb(255, 51, 102); fill: rgb(255, 51, 102);"></span>
+                                    <span class="mbr-iconfont icon54-v2-cube" style="color: rgb(255, 51, 102); fill: rgb(255, 51, 102);"></span>
                                 </div>     
                                 <div class="media-body">
-                                    <h4 class="card-title mbr-fonts-style display-7"><strong>Individueller 3D Druck</strong></h4>
+                                    <h4 class="card-title mbr-fonts-style display-5"><strong>Individueller 3D Druck</strong></h4>
                                 </div>
                             </div>                
 
@@ -129,10 +132,10 @@
                         <div class="card p-3 pr-3">
                             <div class="media">
                                 <div class="align-self-center card-img pb-3">
-                                    <span class="mbr-iconfont socicon-etsy socicon" style="color: rgb(255, 51, 102); fill: rgb(255, 51, 102);"></span>
+                                    <span class="mbr-iconfont fa-etsy fa" style="color: rgb(255, 51, 102); fill: rgb(255, 51, 102);"></span>
                                 </div>     
                                 <div class="media-body">
-                                    <h4 class="card-title mbr-fonts-style display-7"><strong>Sofort verfügbare 3D Drucke</strong></h4>
+                                    <h4 class="card-title mbr-fonts-style display-5"><strong>Sofort verfügbare 3D Drucke</strong></h4>
                                 </div>
                             </div>                
 
@@ -168,7 +171,7 @@
                         </h3>
                     </div>          
                     <div class="step-text-content align-center">
-                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Design</h4>
+                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5"><strong>Design</strong></h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">
                             Bringe ein fertiges Design mit, oder lass dich von unserem Team unterstützen.</p>
                     </div>
@@ -183,8 +186,8 @@
                         </h3>
                     </div>          
                     <div class="step-text-content align-center">
-                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">3D Druck</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Die Druckvorbereitung und der Druck dauern oft mehrere Stunden. Du kannst dir deinen Druckvorgang auf unserem <a href="https://www.youtube.com/channel/UCW0jPsL6AxaK_1S8y0gxJKw">YouTube-Kanal</a>&nbsp;im Anschluss ansehen.</p>
+                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5"><strong>3D Druck</strong></h4>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Die Druckvorbereitung und der Druck dauern oft mehrere Stunden. Du kannst dir deinen Druckvorgang auf&nbsp;<a href="https://www.youtube.com/channel/UCW0jPsL6AxaK_1S8y0gxJKw">YouTube</a>&nbsp;im Anschluss ansehen.</p>
                     </div>
                 </div>
             </div>
@@ -197,7 +200,7 @@
                         </h3>
                     </div>          
                     <div class="step-text-content align-center">
-                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Veredelung</h4>
+                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5"><strong>Veredelung</strong></h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">Zusammensetzen einzelner Teile, lackieren, bemalen, verkleben, ...</p>
                     </div>
                 </div>
@@ -211,8 +214,8 @@
                         </h3>
                     </div>          
                     <div class="step-text-content align-center">
-                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">
-                            Versand</h4>
+                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5"><strong>
+                            Versand</strong></h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">
                             Wir versenden nachhalting mit DHL-Go Green.</p>
                     </div>
@@ -247,7 +250,7 @@
                 <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-2">
                     Hochqualitative Materialien</h2>
                 <h3 class="mbr-section-subtitle align-right mbr-light mbr-white mbr-fonts-style display-5">
-                    Wir verwenden für unsere 3D Drucke ausschließlich hochwertige Filamente von <a href="https://prusament.com/" target="_blank"><strong>Prusament</strong></a>&nbsp;</h3>
+                    Wir verwenden für unsere 3D Drucke ausschließlich hochwertige Filamente von <a href="https://prusament.com/" target="_blank"><strong>Prusament</strong></a>&nbsp;und <a href="https://www.extrudr.com" target="_blank">Extrudr</a></h3>
             </div>
         </div>
     </div>
@@ -266,7 +269,7 @@
             <div class="title pb-5 col-12">
                 <h2 class="align-left pb-3 mbr-fonts-style display-1">
                     PLA</h2>
-                <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style display-5">PLA ist der beliebteste Filamenttyp für 3D-Drucke. Es ist biologisch abbaubar und eine große Auswahl an Farben/Stilen ist verfügbar. PLA ist unser Standardfilament - außer für Objekte die oft gebogen, verdreht oder fallen gelassen werden könnten und Temperaturen über 60° standhalten müssen.</h3>
+                <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style display-7">PLA ist der beliebteste Filamenttyp für 3D-Drucke. Es ist biologisch abbaubar und eine große Auswahl an Farben/Stilen ist verfügbar. PLA ist unser Standardfilament - außer für Objekte die oft gebogen, verdreht oder fallen gelassen werden könnten und Temperaturen über 60° standhalten müssen.</h3>
             </div>
             <!--Card-1-->
             <div class="card col-12 col-md-6 p-3 col-lg-3">
@@ -593,19 +596,21 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
-  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  
+  <script src="assets/formoid/formoid.min.js"></script>
+  <script src="assets/web/assets/lazyload/lazyload.js"></script>
   
 <div id="cookie-dialog" style="display: none;"><div id="cookiesdirective"><div style="position: fixed; top: 0; right: 0; bottom: 0; left: 0; background-color: rgb(0, 0, 0); opacity: 0.8; z-index: 9999;"></div><div style="position: fixed; top: 0; right: 0; bottom: 0; left: 0; display: flex; align-items: center; z-index: 10000"><div class="display-7" style="position: relative; width: 100%; max-width: 500px; margin-right: auto; margin-left: auto; font-size:inherit; padding: 1rem; text-align: center; border-radius: .3rem; box-shadow: 0 10px 40px 0 rgba(0,0,0,0.2); color:#424a4d; background:rgba(234, 239, 241, 0.99);">FlauschCraft verwendet zum Teil Cookies auf dieser Website, die auf Basis des Nutzungsverhaltens bestimmte Funktionen, wie z. B. eine Analyse der Benutzung der Website, ermöglichen. Mehr dazu unter <a style='color: #424a4d; text-decoration: underline;' href='impressum.html'>Datenschutz</a>.<input style="display: block; margin-top: 10px; margin-right: auto; margin-left: auto; font-size:inherit;;" class="btn btn-sm btn-primary display-7" type="submit" name="impliedsubmit" id="impliedsubmit" value="Zustimmen"/></div></div></div></div>
   <input name="cookieData" type="hidden" data-cookie-customDialogSelector='#cookie-dialog' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Zustimmen' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="FlauschCraft verwendet zum Teil Cookies auf dieser Website, die auf Basis des Nutzungsverhaltens bestimmte Funktionen, wie z. B. eine Analyse der Benutzung der Website, ermöglichen. Mehr dazu unter <a href='impressum.html'>Datenschutz</a>.">
     <input name="animation" type="hidden">
-  </body>
+  
+</body>
 </html>
