--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -120,10 +120,9 @@
                     <img src="assets/images/ines-alvarez-fdez-l-n7banlc5y-unsplash.jpg" alt="Mobirise" title="">
                 </div>
                 <div class=" align-left aside-content">
-                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2"><strong>
-                        3D Druck</strong></h2>
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2"></h2>
                     <div class="mbr-section-text">
-                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">Du bekommst bei uns:</p>
+                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5"></p>
                     </div>
 
                     <div class="block-content">
@@ -133,7 +132,7 @@
                                     <span class="mbr-iconfont icon54-v2-cube" style="color: rgb(255, 51, 102); fill: rgb(255, 51, 102);"></span>
                                 </div>     
                                 <div class="media-body">
-                                    <h4 class="card-title mbr-fonts-style display-5"><strong>Individueller 3D Druck</strong></h4>
+                                    <h4 class="card-title mbr-fonts-style display-2"><strong>Individueller 3D Druck</strong></h4>
                                 </div>
                             </div>                
 
@@ -148,7 +147,7 @@
                                     <span class="mbr-iconfont fa-etsy fa" style="color: rgb(255, 51, 102); fill: rgb(255, 51, 102);"></span>
                                 </div>     
                                 <div class="media-body">
-                                    <h4 class="card-title mbr-fonts-style display-5"><strong>Sofort verfügbare 3D Drucke</strong></h4>
+                                    <h4 class="card-title mbr-fonts-style display-2"><strong>Sofort verfügbar</strong></h4>
                                 </div>
                             </div>                
 
