--- a/credits.html
+++ b/credits.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content4 cid-rLbm1W6NBL" id="content4-22">
+<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="mbr-section content4 cid-rLbm1W6NBL" id="content4-22">
 
     
 
