--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -598,7 +598,7 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><b><a href="impressum.html">Impressum &amp; Datenschutz</a>&nbsp;</b></strong><strong><br><a href="#top">Credits</a></strong><br><strong><br></strong>© Copyright 2020 FlauschCraft by Daniela Kräuter</p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><b><a href="impressum.html">Impressum &amp; Datenschutz</a>&nbsp;</b></strong><strong><br><a href="credits.html#content4-22">Credits</a></strong><br><strong><br></strong>© Copyright 2020 FlauschCraft by Daniela Kräuter</p>
             </div>
         </div>
     </div>
