--- a/impressum.html
+++ b/impressum.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
@@ -81,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content4 cid-rL74C6aKyK" id="content4-1f">
+<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="mbr-section content4 cid-rL74C6aKyK" id="content4-1f">
 
     
 
@@ -117,21 +116,19 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/tether/tether.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   <script src="assets/web/assets/lazyload/lazyload.js"></script>
   
 <div id="cookie-dialog" style="display: none;"><div id="cookiesdirective"><div style="position: fixed; top: 0; right: 0; bottom: 0; left: 0; background-color: rgb(0, 0, 0); opacity: 0.8; z-index: 9999;"></div><div style="position: fixed; top: 0; right: 0; bottom: 0; left: 0; display: flex; align-items: center; z-index: 10000"><div class="display-7" style="position: relative; width: 100%; max-width: 500px; margin-right: auto; margin-left: auto; font-size:inherit; padding: 1rem; text-align: center; border-radius: .3rem; box-shadow: 0 10px 40px 0 rgba(0,0,0,0.2); color:#424a4d; background:rgba(234, 239, 241, 0.99);">FlauschCraft verwendet zum Teil Cookies auf dieser Website, die auf Basis des Nutzungsverhaltens bestimmte Funktionen, wie z. B. eine Analyse der Benutzung der Website, ermöglichen. Mehr dazu unter <a style='color: #424a4d; text-decoration: underline;' href='impressum.html'>Datenschutz</a>.<input style="display: block; margin-top: 10px; margin-right: auto; margin-left: auto; font-size:inherit;;" class="btn btn-sm btn-primary display-7" type="submit" name="impliedsubmit" id="impliedsubmit" value="Zustimmen"/></div></div></div></div>
   <input name="cookieData" type="hidden" data-cookie-customDialogSelector='#cookie-dialog' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Zustimmen' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="FlauschCraft verwendet zum Teil Cookies auf dieser Website, die auf Basis des Nutzungsverhaltens bestimmte Funktionen, wie z. B. eine Analyse der Benutzung der Website, ermöglichen. Mehr dazu unter <a href='impressum.html'>Datenschutz</a>.">
-    <input name="animation" type="hidden">
   
 </body>
 </html>
