create github pages

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -82,7 +82,7 @@
         <div class="media-container-column mbr-white col-md-12">
             <h3 class="mbr-section-subtitle py-3 mbr-fonts-style display-5"></h3>
             <h1 class="mbr-section-title py-3 mbr-fonts-style display-1"><strong>Selbstgemachtes in 3D</strong></h1>
-            <p class="mbr-text py-3 mbr-fonts-style display-5">Wir fertigen individuelle und einzigartige Produkte&nbsp;<br>Wir legen wert auf höchste Qualität und beste Materialien. Besuche unseren Shop bei <a href="https://www.etsy.com/" target="_blank"><strong>Etsy</strong></a>.</p>
+            <p class="mbr-text py-3 mbr-fonts-style display-5">Wir fertigen individuelle und einzigartige Produkte&nbsp;<br>Wir legen wert auf höchste Qualität und beste Materialien. Überzeuge dich und besuche unseren Shop bei <a href="https://www.etsy.com/" target="_blank"><strong>Etsy</strong></a>.</p>
             <div class="mbr-section-btn py-4"><a class="btn btn-md btn-primary display-4" href="index.html#features11-1n"><strong>Mehr</strong></a> <a class="btn btn-md btn-warning display-4" href="mailto:anfrage@flauschcraft.com"><strong>Anfrage senden</strong></a></div>
         </div>
     </div>
