create github pages

--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-46327270-7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-46327270-7');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rLbDdgYCwX" once="menu" id="menu1-24">
 
     
@@ -71,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website for free</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
