create github pages

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>
                             TPU</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Mit einer Dehnbarkeit von bis zu 470%, hoher Materialqualität, hoher chemischer Resistenz sowie ausgezeichneter einer Wärmeformbeständigkeit bis 115 °C eignet sich das Material für zahlreiche Anwendungen.<br><br>* Sehr schlag- und bruchfest<br>* Halogenfrei<br>* Frei von Silkon, Weichmacher und Öle<br>* Shore-Härte A98<br>* UV-beständig</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Mit einer Dehnbarkeit von bis zu 470%, hoher Materialqualität, hoher chemischer Resistenz sowie ausgezeichneter Wärmeformbeständigkeit bis 115 °C eignet sich das Material für zahlreiche Anwendungen.<br><br>* Sehr schlag- und bruchfest<br>* Halogenfrei<br>* Frei von Silkon, Weichmacher und Öle<br>* Shore-Härte A98<br>* UV-beständig</p>
                     </div>
                 </div>
             </div>
