--- a/credits.html
+++ b/credits.html
@@ -55,7 +55,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section once="footers" class="cid-rL8zNRshtJ" id="footer6-20">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section once="footers" class="cid-rL8zNRshtJ" id="footer6-20">
 
     
 
